--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
 			<artifactId>jedis</artifactId>
 			<version>2.9.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hbase</groupId>
+			<artifactId>asynchbase</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.asynchttpclient</groupId>
+		    <artifactId>async-http-client</artifactId>
+		    <version>2.0.24</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>webapp</finalName>
