--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,15 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>9.2.8.v20150217</version>
 			</plugin>
+			<plugin>  
+                <groupId>org.apache.maven.plugins</groupId>  
+                <artifactId>maven-eclipse-plugin</artifactId>  
+                <version>2.9</version>  
+                <configuration>  
+                    <downloadSources>true</downloadSources>  
+                </configuration>  
+            </plugin> 
+			<!-- jmh -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
