--- a/pom.xml
+++ b/pom.xml
@@ -110,12 +110,24 @@
 			<artifactId>spring-jdbc</artifactId>
 			<version>4.3.5.RELEASE</version>
 		</dependency>
-		
-		
+
+
 		<dependency>
 			<groupId>net.openhft</groupId>
 			<artifactId>chronicle-map</artifactId>
 			<version>3.12.0</version>
+			<exclusions>
+				<exclusion>
+					<groupId>com.sun.java</groupId>
+					<artifactId>tools</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>2.4.10</version>
 		</dependency>
 	</dependencies>
 	<build>
